--- a/www/privacy.wiki
+++ b/www/privacy.wiki
@@ -1,11 +1,14 @@
 <title>Zettelstore: Privacy</title>
 <h1>Privacy</h1>
 <p>
-If you do not log into this site, the only personal data this web service will
-process is your IP adress. It will only be used to send the data of the website
-you requested to you.
+If you do not log into this site, or login as the user &quot;anonymous&quot;,
+the only personal data this web service will process is your IP adress. It will
+be used to send the data of the website you requested to you and to mitigate
+possible attacks against this website.
 </p>
 <p>
-This website is hosted by <a href="https://ionos.de">!&amp;1 IONOS SE</a>.
-According to <a href="https://www.ionos.de/hilfe/datenschutz/datenverarbeitung-von-webseitenbesuchern-ihres-11-ionos-produktes/andere-11-ionos-produkte/">their information</a>, no processing of personal data is done by them.
+This website is hosted by <a href="https://ionos.de">1&amp;1 IONOS SE</a>.
+According to
+<a href="https://www.ionos.de/hilfe/datenschutz/datenverarbeitung-von-webseitenbesuchern-ihres-11-ionos-produktes/andere-11-ionos-produkte/">their information</a>,
+no processing of personal data is done by them.
 </p>
