--- a/www/download.wiki
+++ b/www/download.wiki
@@ -11,14 +11,13 @@
 <h2>ZIP-ped Executables</h2>
 Build: <code>v0.0.8</code> (2020-12-23).
 
-  *  <a href="../../../uv/zettelstore.zip">Linux</a> (amd64)
-  *  <a href="../../../uv/zettelstore-arm6.zip">Linux</a> (arm6, e.g. Raspberry Pi)
-  *  <a href="../../../uv/zettelstore.exe.zip">Windows</a> (amd64)
-  *  <a href="../../../uv/iZettelstore.zip">macOs</a> (amd64)
+  *  [/uv/zettelstore.zip|Linux] (amd64)
+  *  [/uv/zettelstore-arm6.zip|Linux] (arm6, e.g. Raspberry Pi)
+  *  [/uv/zettelstore.exe.zip|Windows] (amd64)
+  *  [/uv/iZettelstore.zip|macOs] (amd64)
 
 Unzip the appropriate file, install and execute Zettelstore according to the manual.
 
 <h2>Zettel for the manual</h2>
-As a starter, you can download the zettel for the manual <a href="../../../uv/manual.zip">here</a>.
+As a starter, you can download the zettel for the manual [/uv/manual.zip|here].
 Just unzip the file and put it into your zettel folder.
-You can find the newest version of the manual on <a href="https://github.com/zettelstore/zettelstore-manual">GitHub</a>.
