--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -1,7 +1,7 @@
 <title>Change Log</title>
 
 <a name="0_0_9"></a>
-<h2>Changes for Version 0.0.9 (planned)</h2>
+<h2>Changes for Version 0.0.9 (2021-01-29)</h2>
 This is the first version that is managed by [https://fossil-scm.org|Fossil] instead
 of GitHub. To access older versions, use the Git repository under
 [https://github.com/zettelstore/zettelstore-github|zettelstore-github].
