--- a/www/index.wiki
+++ b/www/index.wiki
@@ -3,13 +3,13 @@
 <b>Zettelstore</b> is a software that collects and relates your notes
 (&ldquo;zettel&rdquo;) to represent and enhance your knowledge. It helps with
 many tasks of personal knowledge management by explicitly supporting the
-[href="https://en.wikipedia.org/wiki/Zettelkasten|Zettelkasten method]. The
+[https://en.wikipedia.org/wiki/Zettelkasten|Zettelkasten method]. The
 method is based on creating many individual notes, each with one idea or
 information, that are related to each other. Since knowledge is typically build
 up gradually, one major focus is a long-term store of these notes, hence the
 name &ldquo;Zettelstore&rdquo;.
 
-To get an initial impression, take a look at the <a href="/manual/">manual</a>.
+To get an initial impression, take a look at the [https://zettelstore.de/manual/|manual].
 It is a live example of the zettelstore software, running in read-only mode.
 
 The software, including the manual, is licensed under the
@@ -21,6 +21,6 @@ The software, including the manual, is licensed under the
   *  [./download.wiki|Download]
   *  [./changes.wiki#0_0_9|Change Summary]
   *  [./plan.wiki|Limitations and Planned Improvements]
-  *  [/dir?ci=trunk|Source Code] (mirrored on <a href="https://github.com/zettelstore/zettelstore">GitHub</a>)
+  *  [/dir?ci=trunk|Source Code] (mirrored on [https://github.com/zettelstore/zettelstore|GitHub])
   *  [/download|Download the source code] as a Tarball or a ZIP file
      (you must [/login|login] as user &quot;anonymous&quot;).
