--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -1,6 +1,18 @@
 <title>Change Log</title>
 
 <a name="0_0_9"></a>
+<h2>Changes for Version 0.0.10 (pending)</h2>
+<h3>Syntax</h3>
+  *  (minor) A reference that starts with two slash characters (&ldquo;<code>//</code>&rdquo;)
+             it will be interpreted relative to the value of <code>url-prefix</code>.
+             For example, if <code>url-prefix</code> has the value <code>/manual/</code>,
+             the reference <code>&lbrack;&lbrack;Zettel list|//h]]</code> will render as
+             <code>&lt;a href="/manual/h">Zettel list&lt;/a></code>.
+
+<h3>Server</h3>
+  *  (bug) A reference to a zettel that contains a URL fragment, will now be processed by the indexer.
+
+<a name="0_0_9"></a>
 <h2>Changes for Version 0.0.9 (2021-01-29)</h2>
 This is the first version that is managed by [https://fossil-scm.org|Fossil] instead
 of GitHub. To access older versions, use the Git repository under
