--- a/www/index.wiki
+++ b/www/index.wiki
@@ -21,7 +21,8 @@ The software, including the manual, is licensed under the
   *  [./download.wiki|Download]
   *  [./changes.wiki#0_0_9|Change Summary]
   *  [/timeline?p=version-0.0.9&y=ci|Check-ins for version 0.0.9]
-  *  [/timeline?df=version-0.0.9&y=ci|Check-ins derived from the 0.0.9 release]
+  *  [/timeline?df=version-0.0.9&y=ci|Check-ins derived from the 0.0.9 release],
+     [/vdiff?from=version-0.0.9&to=trunk|content diff]
   *  [./plan.wiki|Limitations and Planned Improvements]
   *  [/dir?ci=trunk|Source Code] (mirrored on [https://github.com/zettelstore/zettelstore|GitHub])
   *  [/download|Download the source code] as a Tarball or a ZIP file
