Give a hint to the GitHub mirror if a so-called developer is not able to use Fossil.
FossilOrigin-Name: 1d8b64417b55fa95d93cd9685fac265f340ba7c282a195da012f03b55c983413

--- a/www/index.wiki
+++ b/www/index.wiki
@@ -32,6 +32,6 @@ Just install [https://fossil-scm.org|Fossil],
 [https://golang.org/dl/|Go] and some Go-based tools. Please read the
 [./build.md|instructions] for details.
 
-  *  [/dir?ci=trunk|Source Code] (mirrored on [https://github.com/zettelstore/zettelstore|GitHub])
+  *  [/dir?ci=trunk|Source Code]
   *  [/download|Download the source code] as a Tarball or a ZIP file
      (you must [/login|login] as user &quot;anonymous&quot;).
