Ignore leading '#' of tag values when searching / filtering.
FossilOrigin-Name: ea5ae59afbd6761442266219e951ba9564da858420420d82e81297e51e94bea0

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -10,7 +10,9 @@
              <code>&lt;a href="/manual/h">Zettel list&lt;/a></code>.
 
 <h3>Server</h3>
-  *  (bug) A reference to a zettel that contains a URL fragment, will now be processed by the indexer.
+  *  (bug)   A reference to a zettel that contains a URL fragment, will now be processed by the indexer.
+  *  (minor) Searching/filtering ignores the leading '#' character of tags.
+             This applies to the API and to the WebUI.
 
 <h3>WebUI</h3>
   *  (major) Menu item &ldquo;Home&rdquo; now redirects to a home zettel.
