When calculating the context, use some zettel with similar tags as the origin zettel for the initial set of context zettel. Follow-up of [0899935b3e].
FossilOrigin-Name: 738b943659e7977800388413a06db496e914111ce24c5d5fe5da76097a167443

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -8,7 +8,8 @@
      The default home zettel contains some welcoming information for the new user.
      (major: webui)
   *  Show context of a zettel by following all backward and/or forward reference
-     up to a defined depth and list the resulting zettel.
+     up to a defined depth and list the resulting zettel. Additionally, some zettel
+     with similar tags as the initial zettel are also taken into account.
      (major: webui)
   *  A zettel that references other zettel within first-level list items, can act
      as a &ldquo;table of contents&rdquo; zettel.
