Build: add support for macOS ARM64 (aka Apple silicon)
FossilOrigin-Name: fd6178cff82841377cf263faa41ce94a3a72e6758c63d89dc04701b2ab8d94b5

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -43,6 +43,8 @@
      (&ldquo;&#8599;&#65038;&rdquo;), which also needed the additional
      &ldquo;&amp;#xfe0e;&rdquo; to disable the conversion to an emoji on iPadOS.
      (minor: webui)
+  *  A pre-build binary for macOS ARM64 (also known as Apple silicon) is available.
+     (minor: infrastructure)
   *  Many smaller bug fixes and inprovements, to the software and to the documentation.
 
 <a name="0_0_9"></a>
