--- a/www/download.wiki
+++ b/www/download.wiki
@@ -9,15 +9,16 @@
   *  Take a look at the [https://zettelstore.de/manual/|manual] to know how to start and use it.
 
 <h2>ZIP-ped Executables</h2>
-Build: <code>v0.0.9</code> (2021-01-29).
+Build: <code>v0.0.10</code> (2021-02-26).
 
-  *  [/uv/zettelstore.zip|Linux] (amd64)
-  *  [/uv/zettelstore-arm6.zip|Linux] (arm6, e.g. Raspberry Pi)
-  *  [/uv/zettelstore.exe.zip|Windows] (amd64)
-  *  [/uv/iZettelstore.zip|macOs] (amd64)
+  *  [/uv/zettelstore-0.0.10-linux-amd64.zip|Linux] (amd64)
+  *  [/uv/zettelstore-0.0.10-linux-arm.zip|Linux] (arm6, e.g. Raspberry Pi)
+  *  [/uv/zettelstore-0.0.10-windows-amd64.zip|Windows] (amd64)
+  *  [/uv/zettelstore-0.0.10-darwin-amd64.zip|macOS] (amd64)
+  *  [/uv/zettelstore-0.0.10-darwin-arm64.zip|macOS] (arm64, aka Apple silicon)
 
 Unzip the appropriate file, install and execute Zettelstore according to the manual.
 
 <h2>Zettel for the manual</h2>
-As a starter, you can download the zettel for the manual [/uv/manual.zip|here].
-Just unzip the file and put it into your zettel folder.
+As a starter, you can download the zettel for the manual [/uv/manual-0.0.10.zip|here].
+Just unzip the contained files and put them into your zettel folder.
