New place type "file" which allows to read zettel from a ZIP file
FossilOrigin-Name: c2997ba5aab2452c57b59b290c7e8c1916a87c71825c1384641d8785bd9720f8

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,9 @@
 
 <a name="0_0_11"></a>
 <h2>Changes for Version 0.0.11 (pending)</h2>
+  *  New place schema "file" allows to read zettel from a ZIP file.
+     A zettel collection can now be packaged and distributed easier.
+     (major: server)
 
 <a name="0_0_10"></a>
 <h2>Changes for Version 0.0.10 (2021-02-26)</h2>
