--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -7,6 +7,10 @@
      (major: server)
   *  Menu bar is shown when displaying error messages.
      (minor: webui)
+  *  When filtering a list of zettel, it can be specified that a given value should
+     <em>not</em> match. Previously, only the whole filter expression could be
+     negated (which is still possible).
+     (minor: api, webui)
 
 <a name="0_0_10"></a>
 <h2>Changes for Version 0.0.10 (2021-02-26)</h2>
