Allow filtering for tags by comparing the prefix only. Still, exact matches are the default.
FossilOrigin-Name: 969548887fead6c6b59bb05e5eb6c12127fa9d4a22ca34ebe5d9b4be4b06107b

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -21,7 +21,12 @@
      (minor: api, webui)
   *  Context of a zettel (introduced in version 0.0.10) does not take tags into account any more.
      Using some tags for determining the context resulted into erratic, non-deterministic context lists.
-     (minor: api,webui)
+     (minor: api, webui)
+  *  Filtering zettel depending on tag values can be both by comparing only the prefix
+     or the whole string. If a search value begins with '#', only zettel with the exact
+     tag will be returned. Otherwise a zettel will be returned if the search string
+     just matches the prefix of only one of its tags.
+     (minor: api, webui)
   *  Many smaller bug fixes and inprovements, to the software and to the documentation.
 
 <a name="0_0_10"></a>
