--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -2,6 +2,12 @@
 
 <a name="0_0_12"></a>
 <h2>Changes for Version 0.0.12 (pending)</h2>
+  *  Mitigate the shortcomings of the macOS version by introducing types of
+     directory places. The original directory place type is now called
+     "notify" (default on Linux and Windows, not available on macOS). There is
+     a new type called "simple" (default on macOS). This new type does not
+     notify Zettelstore when some of the underlying Zettel files change.
+     (major)
 
 <a name="0_0_11"></a>
 <h2>Changes for Version 0.0.11 (2021-04-05)</h2>
